// Copyright Â© 2017-2021 Trust Wallet.
//
// This file is part of Trust. The full Trust copyright notice, including
// terms governing use, modification, and redistribution, is contained in the
// file LICENSE at the root of the source code distribution tree.

syntax = "proto3";

package TW.Everscale.Proto;
option java_package = "wallet.core.jni.proto";

message Address {
    uint32 workchain_id = 1;
    string address = 2;
}

message Transfer {
    bool bounce = 1;
    uint32 flags = 2;
    uint64 amount = 3;

    Address destination = 4;
}

message Action {
    oneof payload {
        Transfer transfer = 1;
    }
}

message SigningInput {
    repeated Action actions = 1;

    bytes private_key = 2;
}

message SigningOutput {
    bytes message = 1;
    int32 to = 2;
}
